Fix templates structure and products views

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,9 +1,14 @@
 {% extends 'pages/base.html' %}
 
-{% block title %}Home Page{% endblock %}
+{% block title %}Home - Online Store{% endblock %}
+
+{% block header_title %}
+Home
+{% endblock %}
 
 {% block content %}
 <div class="text-center">
-  Welcome to the application
+  <h3>Welcome to the application</h3>
+  <p>This is the home page of the Django tutorial project.</p>
 </div>
 {% endblock %}
