--- a/pages/templates/products/show.html
+++ b/pages/templates/products/show.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
-  <div class="col-md-8 text-center">
-    <p class="lead">{{ description }}</p>
-    <hr>
-    <p><strong>{{ author }}</strong></p>
+<div class="card">
+  <div class="card-body">
+    <h3>{{ product.name }}</h3>
+    <p>{{ product.description }}</p>
+    <p><strong>Price:</strong> ${{ product.price }}</p>
   </div>
 </div>
 {% endblock %}
