--- a/pages/templates/products/show.html
+++ b/pages/templates/products/show.html
@@ -1,19 +1,21 @@
 {% extends 'pages/base.html' %}
 
-{% block title %}
-{{ title }}
-{% endblock %}
-
-{% block header_title %}
-{{ subtitle }}
-{% endblock %}
-
 {% block content %}
-<div class="card">
-  <div class="card-body">
-    <h3>{{ product.name }}</h3>
-    <p>{{ product.description }}</p>
-    <p><strong>Price:</strong> ${{ product.price }}</p>
-  </div>
-</div>
+
+<h3>{{ product.name }}</h3>
+
+{% if product.price > 2000 %}
+<p style="color:red;">{{ product.price }}</p>
+{% else %}
+<p>{{ product.price }}</p>
+{% endif %}
+
+<h5>Comments:</h5>
+
+{% for comment in product.comment_set.all %}
+- {{ comment.description }} <br>
+{% empty %}
+No comments yet.
+{% endfor %}
+
 {% endblock %}
